<resources>
    <string name="app_name">PasswordGuardian</string>
    <string name="entry_text">Enter your master password</string>
    <string name="password_field_text">Password</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="register_text">Please create master password</string>
    <string name="register_button_text">Confirm new master password</string>
    <string name="wrong_password_text">Wrong password</string>
    <string name="password_repeat_field_text">Repeat password</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="filter_field_text">Start typing cite name</string>
    <string name="filter_button_text">Search</string>
    <string name="add_new_password_button_text" translatable="false">+</string>
    <string name="title_activity_settings">Settings</string>


    <string name="settings_button_text">Settings</string>
    <string name="new_entry_name_text">Name</string>
    <string name="new_entry_password_text">Password</string>
    <string name="generate_password_button">Generate password</string>
    <string name="new_entry_popup_title">Create new entry</string>
    <string name="button_accept" translatable="false">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="settings_header_random_password">Random password</string>
    <string name="random_password_length_preference_key" translatable="false">random_password_length</string>

    <string name="copy_to_clipboard_text">Copied to clipboard!</string>
    <string name="about_button_text">About</string>
    <string name="about_title">About</string>
    <string name="about_message">Do I have a story for you…\n
    Long press to copy password to the clipboard\n
    \'+\' to create new password entry\n
    \'-\' to delete particular password entry</string>
    <string name="confirm_deletion_message">Are you sure you want to delete this entry?</string>
    <string name="settings_header_general">General</string>
    <string name="succesiful_registration_toast">Registered successfully</string>
    <string name="change_master_password">Change master password</string>
    <string name="if_search_in_passwords_preference_key" translatable="false">if_search_in_passwords</string>
    <string name="if_search_in_passwords_preference_title">Filter by password value</string>

</resources>
