<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_header_general">
        <CheckBoxPreference
            app:key="@string/if_search_in_passwords_preference_key"
            android:title="@string/if_search_in_passwords_preference_title"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_header_random_password">
        <SeekBarPreference
            app:key="@string/random_password_length_preference_key"
            app:title="Length of a random generated password"
            app:useSimpleSummaryProvider="true"
            app:showSeekBarValue="true"
            app:min="4"
            android:max="20"
            android:defaultValue="12"/>

    </PreferenceCategory>

</PreferenceScreen>
