<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <EditText
            android:id="@+id/newEntryNameField"
            android:hint="@string/new_entry_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/newEntryPasswordField"
            android:hint="@string/new_entry_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/newEntryNameField"/>

        <Button
            android:id="@+id/generatePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_password_button"
            app:layout_constraintTop_toBottomOf="@id/newEntryPasswordField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>